Add styles for mobile and tablet and update nav bar

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-masonry-component": "^6.2.1",
     "sass": "^1.26.10",
     "styled-components": "^5.1.1"
   }
