--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-masonry-component": "^6.2.1",
+    "react-responsive-masonry": "^2.1.0",
     "react-transition-group": "^1.2.1",
     "sass": "^1.26.10",
     "styled-components": "^5.1.1"
