--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@n8tb1t/use-scroll-position": "^1.0.43",
     "framer-motion": "^2.6.3",
     "next": "9.3.5",
     "react": "16.13.1",
