--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "16.13.1",
     "react-grid-layout": "^1.0.0",
     "react-masonry-component": "^6.2.1",
+    "react-masonry-css": "^1.0.14",
     "sass": "^1.26.10",
     "styled-components": "^5.1.1"
   },
