Add About and Contact Page. .mdx Markdown is weird

--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@n8tb1t/use-scroll-position": "^1.0.43",
+    "@mdx-js/loader": "^1.6.18",
+    "@next/mdx": "^9.5.3",
     "framer-motion": "^2.6.3",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-grid-layout": "^1.0.0",
-    "react-masonry-component": "^6.2.1",
     "react-masonry-css": "^1.0.14",
+    "remark-align": "^1.2.13",
+    "remark-emoji": "^2.1.0",
+    "remark-images": "^2.0.0",
     "sass": "^1.26.10",
     "styled-components": "^5.1.1"
   },
