Ready for Launch

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "formik": "^2.1.7",
     "framer-motion": "^2.7.7",
     "next": "9.3.5",
+    "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-ga": "^3.1.2",
     "react-grid-layout": "^1.1.1",
     "react-masonry-css": "^1.0.14",
     "remark-align": "^1.2.13",
