--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "remark-align": "^1.2.13",
     "remark-emoji": "^2.1.0",
     "remark-images": "^2.0.0",
-    "sass": "^1.26.11",
+    "sass": "^1.26.12",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6"
+    "@babel/core": "^7.11.6",
+    "babel-plugin-styled-components": "^1.11.1"
   }
 }
